--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Michael l Tenamore</title>
+    <title>Michael L Tenamore</title>
 
     <meta name="viewport" content="width=device-width">
 
@@ -36,9 +36,9 @@
   </head>
   <body>
     <main>
-      <h1>Michael l Tenamore</h1>
+      <h1>Michael Lawrence Tenamore</h1>
       <br>
-      <a href="mailto:michaelltenamore@protonmail.com" title="michaelltenamore@protonmail.com">contact@stefanfisk.com</a>
+      <a href="mailto:michaelltenamore@protonmail.com" title="michaelltenamore@protonmail.com">michaelltenamore@protonmail.com</a>
       <br>
       <a href="tel:+16084087933" title="+1 (608)-408-7933">+1 (608)-408-7933</a>
     </main>
